	     as error.

Severity   : normal
Bugzilla   : 12646
Description: sanity.sh test_77h fails with "test_77h file compare failed"
Details    : test_77h uses a file which was messed by other test case.

Severity   : normal
Bugzilla   : 12576
Description: Not Check whether lov_tgts is NULL in some lov functions
Details    : Checking whether lov_tgts is NULL in some functions. 

--------------------------------------------------------------------------------

2007-05-03  Cluster File Systems, Inc. <info@clusterfs.com>
       * version 1.6.0.1
       * bug fixes

Severity   : normal
Frequency  : on some architectures
Bugzilla   : 12404
Description: 1.6 client sometimes fails to mount from a 1.4 MDT
Details    : Uninitialized flags sometimes cause configuration commands to
	     be skipped.

Severity   : normal
Frequency  : patchless clients only
Bugzilla   : 12391
Description: missing __iget() symbol export
Details    : The __iget() symbol export is missing.  To avoid the need for
	     this on patchless clients the deathrow inode reaper is turned
	     off, and we depend on the VM to clean up old inodes.  This
	     dependency was during via the fix for bug 12181.

--------------------------------------------------------------------------------

2007-04-19  Cluster File Systems, Inc. <info@clusterfs.com>
       * version 1.6.0
       * CONFIGURATION CHANGE.  This version of Lustre WILL NOT
	 INTEROPERATE with older versions automatically.  In many cases a
	 special upgrade step is needed. Please read the
	 user documentation before upgrading any part of a 1.4.x system.
       * WARNING: Lustre configuration and startup changes are required with
	 this release.  See https://mail.clusterfs.com/wikis/lustre/MountConf
	 for details.
       * Support for kernels:
        2.4.21-47.0.1.EL (RHEL 3)
        2.6.5-7.283 (SLES 9)
        2.6.9-42.0.10.EL (RHEL 4)
        2.6.12.6 vanilla (kernel.org)
        2.6.16.27-0.9 (SLES10)
       * Client support for unpatched kernels: